fixed CSS header padding and h2 text-align

--- a/themes/hello-4s3ti/assets/scss/_header.scss
+++ b/themes/hello-4s3ti/assets/scss/_header.scss
@@ -41,6 +41,7 @@
     margin: 0 auto;
     width: 1200px;
     max-width: 100%;
+    padding-left: 15px;
   }
 }
 
