--- a/themes/hello-4s3ti/assets/scss/_main.scss
+++ b/themes/hello-4s3ti/assets/scss/_main.scss
@@ -79,6 +79,7 @@ h1 {
 h2 {
   font-size: 1.625rem;
   margin-top: 2.5em;
+  text-align: left;
 }
 
 h3 {
